--- a/Fundamento da computação/css/style.css
+++ b/Fundamento da computação/css/style.css
@@ -5,11 +5,20 @@ line-height: 1.6;
 margin: 20px;
 background-color: #f9f9f9;
 color: #333;
+text-align: center;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+text-align: center;
+padding: 20px;
+font-family: Arial, sans-serif;
 }
 h1 {
 font-family: 'Georgia', serif;
 font-size: 32px;
 color: #2c3e50;
+text-align: center;
 }
 h2 {
 font-family: 'Georgia', serif;
@@ -28,4 +37,11 @@ border: 0;
 height: 1px;
 background: #ccc;
 margin: 20px 0;
+}
+.content {
+    max-width: 800px;
+    text-align: left;
+}
+p{
+    text-align: center;
 }
