--- a/Linguagens de marcação/Atividades/Tabela Climática/css/style.css
+++ b/Linguagens de marcação/Atividades/Tabela Climática/css/style.css
@@ -4,6 +4,7 @@ table {
     text-align: center;
     font-family: "Times New Roman", Times, serif;
     font-size: 12px;
+    margin: auto;
 }
 
 th, td {
