--- a/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
@@ -1,24 +1,12 @@
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(../fonts/Montserrat-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/Montserrat-Bold.ttf) format('truetype');
-}
 
 body {
-  font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  margin: 0px;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
 }
 
-/* Header */
+
 header {
+  padding: 1px;
   background-image: url(../img/header-bg.jpg);
   background-size: cover;
   background-attachment: fixed;
@@ -26,9 +14,8 @@ header {
   height: 100vh;
   min-height: 400px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  text-align: center;
+  justify-content: center;
 }
 
 header .intro-text p, header .intro-text h1 {
@@ -61,42 +48,32 @@ header .intro-text .btn-intro {
   text-transform: uppercase;
 }
 
-/* Main */
+.intro-text {
+  text-align: center;
+}
+
+
 main {
   color: #333;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-}
-
-main .service-description {
   text-align: center;
-  margin-bottom: 50px;
-}
-
-.services-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-main .service {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  margin: 20px;
-  padding: 10px;
-  max-width: 300px;
+  width: 970px;
+  margin: auto;
 }
 
 main .service .circle-icon {
   background-color: #fed136;
   color: #fff;
-  padding: 20px;
+  width: 6em;
+  height: 6em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin: auto;
+}
+
+.circle-icon i {
+  font-size: 60px;
 }
 
 main .service-description h1 {
@@ -112,45 +89,86 @@ main .service p {
   color: #777;
   font-size: 14px;
   line-height: 1.75;
+  margin: auto;
 }
 
-/* Footer */
-footer {
-  background-color: #ecece2;
-  padding: 20px 0;
+.service-description {
+  text-align: center;
+  margin-top: 100px;
 }
 
-footer .footer-content {
+.flexbox {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
-  padding: 20px;
+  justify-content: space-between;
+  margin-top: 130px;
+  margin-bottom: 80px;
+}
+
+.service {
+  flex-basis: calc(33.333% - 1rem);
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
   text-align: center;
 }
 
-footer .footer-content section {
-  flex: 1;
-  margin: 10px;
+
+footer {
+  background-color: #ecece2;
 }
 
-footer .social ul {
-  display: flex;
-  justify-content: center;
-  padding: 0;
-}
-
-footer .social ul li {
-  list-style: none;
-  margin: 0 10px;
+footer section.social a {
+  color: #555;
+  text-decoration: none;
 }
 
 footer section.copyright {
   color: #555;
   background-color: #c7c7af;
+  padding: 20px;
   text-align: center;
-  padding: 10px 0;
 }
 
 footer section.copyright i.fa-heart {
   color: #f00;
+}
+
+.footer-content {
+  display: flex;
+  text-align: center;
+  padding: 60px;
+}
+
+.footer-content > section {
+  flex-basis: calc(33.333% - 1rem);
+}
+
+.social ul {
+  display: flex;
+  list-style: none;
+  gap: 22px;
+  padding-left: 0;
+  justify-content: center;
+}
+
+.social h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.social ul li {
+  text-align: center;
+}
+
+.social ul li a i {
+  border: 3px solid gray;
+  padding: 8px;
+  border-radius: 50%;
+}
+
+.social ul li a i:hover {
+  color: white;
+  background-color: gray;
 }
