--- a/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
@@ -111,6 +111,7 @@ main .service p {
   display: grid;
   grid-template-rows: auto 1fr;
   gap: 1rem;
+  align-items: center;
   text-align: center;
 }
 
