--- a/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
@@ -103,15 +103,15 @@ main .service p {
   justify-content: space-between;
   margin-top: 130px;
   margin-bottom: 80px;
+  gap: 1rem; /* Espaçamento entre os itens */
 }
 
 .service {
-  flex-basis: calc(33.333% - 1rem);
+  flex-basis: calc(33.333% - 1rem); /* Ajuste a largura conforme necessário */
   margin-bottom: 30px;
-  display: grid;
-  grid-template-rows: auto 1fr;
-  gap: 1rem;
-  align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centralize o conteúdo dentro do item */
   text-align: center;
 }
 
