--- a/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
@@ -1,23 +1,10 @@
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Montserrat Regular'), local('Montserrat-Regular'), url(../fonts/Montserrat-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Montserrat Bold'), local('Montserrat-Bold'), url(../fonts/Montserrat-Bold.ttf) format('truetype');
-}
 
 body {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0px;
+  margin: 0;
 }
 
-/* Header */
+
 header {
   padding: 1px;
   background-image: url(../img/header-bg.jpg);
@@ -27,12 +14,11 @@ header {
   height: 100vh;
   min-height: 400px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
-header .intro-text p,
-header .intro-text h1 {
+header .intro-text p, header .intro-text h1 {
   color: #ecece2;
 }
 
@@ -64,18 +50,14 @@ header .intro-text .btn-intro {
 
 .intro-text {
   text-align: center;
- 
-  
-
 }
 
-/* Main */
+
 main {
   color: #333;
   text-align: center;
-  width: 900px;
+  width: 970px;
   margin: auto;
-
 }
 
 main .service .circle-icon {
@@ -86,10 +68,12 @@ main .service .circle-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
-
-
   border-radius: 50%;
+  margin: auto;
+}
+
+.circle-icon i {
+  font-size: 60px;
 }
 
 main .service-description h1 {
@@ -105,40 +89,35 @@ main .service p {
   color: #777;
   font-size: 14px;
   line-height: 1.75;
- 
   margin: auto;
-
-
-}
-* {
-  box-sizing: border-box;
 }
 
 .service-description {
   text-align: center;
-  margin-top: 105px;
+  margin-top: 100px;
 }
 
 .flexbox {
-  display:grid;
-  grid-template-columns: repeat(3,1fr);
-  /* flex-wrap: wrap; */
-  margin-top: 151px;
-  margin-bottom: 85px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 130px;
+  margin-bottom: 80px;
 }
 
 .service {
-  /* flex-basis: calc(100%/3 - 2rem); */
-  margin-bottom: 40px;
-  padding: 1rem;
+  flex-basis: calc(33.333% - 1rem);
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  gap: 1rem;
+  text-align: center;
 }
 
-/* footer */
+
 footer {
   background-color: #ecece2;
-  
-
-
+}
 
 footer section.social a {
   color: #555;
@@ -157,56 +136,39 @@ footer section.copyright i.fa-heart {
 }
 
 .footer-content {
-  text-align: center;
   display: flex;
-  padding: 40px 15% 60px;
+  text-align: center;
+  padding: 60px;
 }
 
-
-.footer-content > section{
-  flex-basis: calc(100% / 3);
+.footer-content > section {
+  flex-basis: calc(33.333% - 1rem);
 }
 
 .social ul {
   display: flex;
   list-style: none;
-  gap: 25px;
-  padding-right: 15px;
-  
-}
-
-.social ul li a i {
-  border: 3px solid #555;
-  border-radius: 46%;
-  padding: 10px;
-  font-size: 30px;
-
-}
-
-.address p {
-  margin: auto;
-  width: 200px;
-  text-align: center;
+  gap: 22px;
+  padding-left: 0;
+  justify-content: center;
 }
 
 .social h1 {
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.address h1 {
+.social ul li {
   text-align: center;
 }
 
-.about h1,
-p {
-  text-align: center;
+.social ul li a i {
+  border: 3px solid gray;
+  padding: 8px;
+  border-radius: 50%;
 }
 
-.copyright {
-  text-align: center;
-
-}
-
-.circle-icon i {
-  font-size: 45px;
+.social ul li a i:hover {
+  color: white;
+  background-color: gray;
 }
