--- a/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
+++ b/Linguagens de marcação/Atividades/Portifólio com Layout/css/main.css
@@ -97,7 +97,7 @@ main .service p {
   margin-top: 100px;
 }
 
-.flexbox {
+.box {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
